--- a/src/assets/styles/calendar.css
+++ b/src/assets/styles/calendar.css
@@ -34,7 +34,7 @@ td {
   opacity: 0;
 }
 .is-disabled {
-  color: #ccc;
+  /* color: #ccc; */
   font-weight: bold;
   cursor: pointer;
 }
@@ -82,4 +82,83 @@ td {
   margin-left: 58%;
   margin-top: 3.25%;
   z-index: 2;
+}
+
+/* arrow部分 */
+.arrow{
+  position: relative;
+  display: inline-block;
+  padding-left: 20px;
+  cursor: pointer;
+  opacity: 0.5;
+}
+.arrow:hover{
+  opacity: 1;
+}
+
+.arrow.left::before{
+  content: '';
+  width: 12px;
+  height: 12px;
+  border: 0px;
+  margin-right: 5px;
+  border-top: solid 4px #0074BB;
+  border-right: solid 4px #0074BB;
+  -ms-transform: rotate(45deg);
+  -webkit-transform: rotate(45deg);
+  transform: rotate(-135deg);
+  position: absolute;
+  top: 50%;
+  left: 0;
+  margin-top: -8px;
+}
+
+.arrow.right::before{
+  content: '';
+  width: 12px;
+  height: 12px;
+  border: 0px;
+  margin-left: 3px;
+  border-top: solid 4px #0074BB;
+  border-right: solid 4px #0074BB;
+  -ms-transform: rotate(45deg);
+  -webkit-transform: rotate(45deg);
+  transform: rotate(45deg);
+  position: absolute;
+  top: 50%;
+  left: 0;
+  margin-top: -8px;
+}
+
+.arrow.left.head{
+  position: absolute;
+  float: left;
+  outline: none;
+  border: none;
+  margin-left: 40%;
+  margin-top: 3.25%;
+  z-index: 2;
+}
+.arrow.right.head{
+  position: absolute;
+  float: right;
+  outline: none;
+  border: none;
+  margin-left: 58%;
+  margin-top: 3.25%;
+  z-index: 2;
+}
+
+@media screen and (max-width:480px){ 
+  #calendar{
+    margin-top: 25%;
+  }
+  .arrow.left.head{
+    margin-left: 20%;
+    margin-top: 9.5%;
+  }  
+  .arrow.right.head{
+    margin-left: 68%;
+    margin-top: 9.5%;
+  }
 }
