モーダルのcssに変更加えて、display noneに変更

--- a/src/assets/styles/intro.css
+++ b/src/assets/styles/intro.css
@@ -126,11 +126,11 @@ header {
 }
 
 .Menu-Group {
-    visibility: hidden;
+    display: none;
 }
 
 .Menu-Group.active {
-    visibility: visible;
+    display: block;
     position: fixed;
     top: 0;
     right: 0;
