--- a/src/assets/styles/attend.css
+++ b/src/assets/styles/attend.css
@@ -1,32 +1,41 @@
-.contents {
-  text-align: center;
+body {
+	overflow: hidden;
 }
 
-.anchor_animation{
-  /* position: absolute; */
+.contents {
+	text-align: center;
+}
+
+.anchor_animation {
 	top: 0;
-	/* left: 50px; */
 	width: 100%;
-	/* height: 50px; */
 	animation: come-down-anim 2s linear;
-	/* z-index: 5; */
+	padding-top: 110%;
 }
 
 @keyframes come-down-anim {
 	0% {
-	transform: translateY(-100%);
+		transform: translateY(-35%);
 	}
+
 	100% {
-	transform: translateY(2px);
+		transform: translateY(-20px);
 	}
 }
 
-.attend_button{
-  width: 100%;
-  padding-top: 6%;
-  padding-bottom: 6%;
-  font-size: 40px;
-  color: aliceblue;
-  font-weight: bold;
-  background-color: #2E78BA;
+.wave_animation > svg{
+	position: absolute;
+	bottom: 5%;
+}
+
+.attend_button {
+	width: 100%;
+	padding-top: 6%;
+	padding-bottom: 6%;
+	font-size: 40px;
+	color: aliceblue;
+	font-weight: bold;
+	background-color: #2E78BA;
+	position: absolute;
+	bottom: 0;
 }
