--- a/src/assets/styles/user_disp_table.css
+++ b/src/assets/styles/user_disp_table.css
@@ -12,3 +12,16 @@
   position:absolute;
   top:0;
 }
+
+.git {
+  position: absolute;
+  top:150px;
+  right: 20px;
+  margin-right: 5px;
+  font-size: 25px;
+}
+
+.insta{
+  top:150px;
+  font-size: 25px;
+}
