ヘッダーのステータスの文字を変えられた

--- a/src/assets/styles/intro.css
+++ b/src/assets/styles/intro.css
@@ -42,10 +42,9 @@ header {
     border: solid 2px rgb(46, 119, 186);
 }
 
-/* なぜか効かないコード↓ */
 .p-header__status.active {
     color: rgb(134, 134, 134);
-    background-color: #bbb;
+    background-color: #e6e6e6;
     border: solid 2px rgb(134, 134, 134);
 }
 
