微調整完了

--- a/src/assets/styles/calendar.css
+++ b/src/assets/styles/calendar.css
@@ -9,7 +9,7 @@
   margin-top: 30px;
 }
 section {
-  margin: 10px;
+  /* margin: 10px; */
 }
 h1 {
   font-size: 18px;
@@ -153,7 +153,7 @@ td {
 
 @media screen and (max-width:480px){ 
   #calendar{
-    margin-top: -48%;
+    margin-top: -40%;
   }
   section{
     /* margin-top: -23%; */
