--- a/src/assets/styles/attend.css
+++ b/src/assets/styles/attend.css
@@ -107,6 +107,47 @@ button {
 	}
 }
 
+/* 入退室画面・はばずの滞在者画面切り替えバー */
+.upbar-section {
+	justify-content: space-between;
+	align-items: center;
+	width: 100%;
+	background-color: #e8e8e8;
+	border-bottom: solid 1px #bbb;
+	margin-top: 2%;
+	/* padding-top: 4px; */
+	/* position: fixed;
+	top: 75px; */
+	position: fixed;
+	top: 70px;
+	z-index: 800;
+}
+
+.upbar-section__nav {
+	display: flex;
+	height: 50px;
+}
+
+.upbar-section__nav__attend {
+	width: 50%;
+}
+
+
+.status-section__nav__status {
+	width: 50%;
+	border-bottom: 0.3rem solid #0074BB;
+}
+
+.upbar-section__nav__attend__link {
+	display: block;
+	width: 100%;
+	height: 100%;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+}
+
+
 .bird {
   position: absolute;
   width: 10px;
