--- a/src/assets/styles/attend.css
+++ b/src/assets/styles/attend.css
@@ -9,8 +9,6 @@ body {
 .anchor_animation {
 	top: 0;
 	width: 100%;
-	animation: come-down-anim 2s linear;
-	padding-top: 110%;
 }
 
 @keyframes come-down-anim {
@@ -21,6 +19,13 @@ body {
 	100% {
 		transform: translateY(-20px);
 	}
+}
+
+.anchor_animation.active {
+	top: 0;
+	width: 100%;
+	animation: come-down-anim 2s linear;
+	padding-top: 110%;
 }
 
 .wave_animation>svg {
@@ -150,118 +155,265 @@ button {
 
 
 .bird {
-  position: absolute;
-  width: 10px;
-  height: 10px;
-  transform: rotate(45deg);
-  animation: moving 16s linear infinite;
+	position: absolute;
+	width: 10px;
+	height: 10px;
+	transform: rotate(45deg);
+	animation: moving 16s linear infinite;
 }
 
 .bird.-type_2 {
-  animation-delay: 1s;
+	animation-delay: 1s;
 }
+
 .bird.-type_2:before,
 .bird.-type_2:after {
-  animation-delay: -2s;
+	animation-delay: -2s;
 }
 
 .bird.-type_3 {
-  animation-delay: 3s;
+	animation-delay: 3s;
 }
 
 @keyframes moving {
-  0% {
-    top: 47vh;
-    left: -2vw;
-  }
-  25% {
-    top: 51vh;
-    left: 23vw
-  }
-  100% {
-    top: 47vh;
-    left: 101vw;
-  }
+	0% {
+		top: 47vh;
+		left: -2vw;
+	}
+
+	25% {
+		top: 51vh;
+		left: 23vw
+	}
+
+	100% {
+		top: 47vh;
+		left: 101vw;
+	}
 }
 
-.bird:before, .bird:after {
-  content: "";
-  position: absolute;
-  bottom: 0;
-  right: 0;
-  background-color: black;
-  transform: rotate(-30deg);
-  transform-origin: right bottom;
+.bird:before,
+.bird:after {
+	content: "";
+	position: absolute;
+	bottom: 0;
+	right: 0;
+	background-color: black;
+	transform: rotate(-30deg);
+	transform-origin: right bottom;
 }
 
 .bird:before {
-  width: 100%;
-  height: 1px;
-  animation: leftWing 8s linear infinite;
+	width: 100%;
+	height: 1px;
+	animation: leftWing 8s linear infinite;
 }
+
 .bird:after {
-  width: 1px;
-  height: 100%;
-  animation: rightWing 8s linear infinite;
+	width: 1px;
+	height: 100%;
+	animation: rightWing 8s linear infinite;
 }
 
 @keyframes leftWing {
-  0%   { transform: rotate(-30deg); }
-  2%   { transform: rotate(-110deg); }
-  4%   { transform: rotate(-30deg); }
-  6%   { transform: rotate(-110deg); }
-  8%   { transform: rotate(-30deg); }
-  10%  { transform: rotate(-110deg); }
-  12%  { transform: rotate(-30deg); }
-  30%  { transform: rotate(-30deg); }
-  42%  { transform: rotate(-35deg); }
-  72%  { transform: rotate(-35deg); }
-  74%  { transform: rotate(10deg); }
-  76%  { transform: rotate(-30deg); }
-  78%  { transform: rotate(-110deg); }
-  80%  { transform: rotate(-30deg); }
-  82%  { transform: rotate(-110deg); }
-  84%  { transform: rotate(-30deg); }
-  86%  { transform: rotate(-110deg); }
-  88%  { transform: rotate(-30deg); }
-  90%  { transform: rotate(-110deg); }
-  92%  { transform: rotate(-30deg); }
-  94%  { transform: rotate(-110deg); }
-  96%  { transform: rotate(-30deg); }
-  98%  { transform: rotate(-110deg); }
-  100% { transform: rotate(-30deg); }
+	0% {
+		transform: rotate(-30deg);
+	}
+
+	2% {
+		transform: rotate(-110deg);
+	}
+
+	4% {
+		transform: rotate(-30deg);
+	}
+
+	6% {
+		transform: rotate(-110deg);
+	}
+
+	8% {
+		transform: rotate(-30deg);
+	}
+
+	10% {
+		transform: rotate(-110deg);
+	}
+
+	12% {
+		transform: rotate(-30deg);
+	}
+
+	30% {
+		transform: rotate(-30deg);
+	}
+
+	42% {
+		transform: rotate(-35deg);
+	}
+
+	72% {
+		transform: rotate(-35deg);
+	}
+
+	74% {
+		transform: rotate(10deg);
+	}
+
+	76% {
+		transform: rotate(-30deg);
+	}
+
+	78% {
+		transform: rotate(-110deg);
+	}
+
+	80% {
+		transform: rotate(-30deg);
+	}
+
+	82% {
+		transform: rotate(-110deg);
+	}
+
+	84% {
+		transform: rotate(-30deg);
+	}
+
+	86% {
+		transform: rotate(-110deg);
+	}
+
+	88% {
+		transform: rotate(-30deg);
+	}
+
+	90% {
+		transform: rotate(-110deg);
+	}
+
+	92% {
+		transform: rotate(-30deg);
+	}
+
+	94% {
+		transform: rotate(-110deg);
+	}
+
+	96% {
+		transform: rotate(-30deg);
+	}
+
+	98% {
+		transform: rotate(-110deg);
+	}
+
+	100% {
+		transform: rotate(-30deg);
+	}
 }
 
 @keyframes rightWing {
-  0%   { transform: rotate(30deg); }
-  2%   { transform: rotate(110deg); }
-  4%   { transform: rotate(30deg); }
-  6%   { transform: rotate(110deg); }
-  8%   { transform: rotate(30deg); }
-  10%  { transform: rotate(110deg); }
-  12%  { transform: rotate(30deg); }
-  30%  { transform: rotate(30deg); }
-  42%  { transform: rotate(35deg); }
-  72%  { transform: rotate(35deg); }
-  74%  { transform: rotate(0deg); }
-  76%  { transform: rotate(30deg); }
-  78%  { transform: rotate(110deg); }
-  80%  { transform: rotate(30deg); }
-  82%  { transform: rotate(110deg); }
-  84%  { transform: rotate(30deg); }
-  86%  { transform: rotate(110deg); }
-  88%  { transform: rotate(30deg); }
-  90%  { transform: rotate(110deg); }
-  92%  { transform: rotate(30deg); }
-  94%  { transform: rotate(110deg); }
-  96%  { transform: rotate(30deg); }
-  98%  { transform: rotate(110deg); }
-  100% { transform: rotate(30deg); }
+	0% {
+		transform: rotate(30deg);
+	}
+
+	2% {
+		transform: rotate(110deg);
+	}
+
+	4% {
+		transform: rotate(30deg);
+	}
+
+	6% {
+		transform: rotate(110deg);
+	}
+
+	8% {
+		transform: rotate(30deg);
+	}
+
+	10% {
+		transform: rotate(110deg);
+	}
+
+	12% {
+		transform: rotate(30deg);
+	}
+
+	30% {
+		transform: rotate(30deg);
+	}
+
+	42% {
+		transform: rotate(35deg);
+	}
+
+	72% {
+		transform: rotate(35deg);
+	}
+
+	74% {
+		transform: rotate(0deg);
+	}
+
+	76% {
+		transform: rotate(30deg);
+	}
+
+	78% {
+		transform: rotate(110deg);
+	}
+
+	80% {
+		transform: rotate(30deg);
+	}
+
+	82% {
+		transform: rotate(110deg);
+	}
+
+	84% {
+		transform: rotate(30deg);
+	}
+
+	86% {
+		transform: rotate(110deg);
+	}
+
+	88% {
+		transform: rotate(30deg);
+	}
+
+	90% {
+		transform: rotate(110deg);
+	}
+
+	92% {
+		transform: rotate(30deg);
+	}
+
+	94% {
+		transform: rotate(110deg);
+	}
+
+	96% {
+		transform: rotate(30deg);
+	}
+
+	98% {
+		transform: rotate(110deg);
+	}
+
+	100% {
+		transform: rotate(30deg);
+	}
 }
 
 /****** Base style. ******/
 body {
-  overflow: hidden;
-  height: 100vh;
-  margin: 0;
+	overflow: hidden;
+	height: 100vh;
+	margin: 0;
 }
