--- a/src/assets/styles/calendar.css
+++ b/src/assets/styles/calendar.css
@@ -1,3 +1,22 @@
+
+@media screen and (min-width: 480px) {
+  /* html要素にはdisplay:blockを指定する必要はありません */
+  
+  html {
+      display: flex; /* displayをflexに変更 */
+      margin: 0 auto;
+      align-items: center;
+      height: 100vh;
+      width: 450px; /* 画面の幅いっぱいに表示 */
+      background-color: lightblue;
+  }
+}
+
+
+html{
+  height: 150vh;
+}
+
 .calendar-title{
   text-align: center;
   position: relative;
@@ -6,7 +25,6 @@
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
-  margin-top: 30px;
 }
 section {
   /* margin: 10px; */
